<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2014 The Android Open Source Project

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

       http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<resources>
    <string name="cast_application_id" translatable="false">CC1AD845</string>

    <string name="app_name">Hangoskönyvtár</string>
    <string name="placeholder_message">Fejlesztés alatt - Hamarosan ...</string>

    <!-- DRAWER MENU -->
    <string name="drawer_allmusic_title">Hangoskönyvek</string>
    <string name="drawer_playlists_title">Lejátszási lista</string>
    <string name="drawer_settings_title">Beállítások</string>
    <string name="drawer_feedback_title">Visszajelzés küldése</string>
    <string name="drawer_about_title">Névjegy</string>
    <string name="drawer_quit_title">Kilépés</string>

    <string name="error_no_metadata">Hiba az adatok letöltése közben</string>

    <!-- Main categories and titles for those -->
    <string name="label_catalog">Katalógus</string>

    <string name="browse_genres">Műfajok</string>
    <string name="browse_genre_subtitle">Könyvek műfajok alapján</string>

    <string name="browse_writer">Szerzők</string>
    <string name="browse_writer_subtitle">Könyvek szerzőik alapján</string>

    <string name="browse_ebook">Minden Könyv</string>
    <string name="browse_ebook_subtitle">Böngészés ABC rendben</string>

    <string name="browse_queue">Lejátszási lista</string>
    <string name="browse_queue_subtitle">Legutóbb hallgatott könyv</string>

    <string name="browse_favorites">Kedvenc Könyvek</string>
    <string name="browse_favorites_subtitle">Korábban elmentett kedvencek</string>

    <string name="browse_track_count">%1$s fájl</string>
    <string name="browse_title_count">%1$s könyv</string>

    <!-- ACTION ITEMS: Action, Notifications -->
    <string name="action_listen">Hallgatás</string>

    <!-- Confirm -->
    <string name="confirm_cancel">Mégsem</string>

    <!-- Favorites -->
    <string name="action_favorite">Kedvenc</string>
    <string name="action_favorite_add">Kedvencekhez adás</string>
    <string name="action_favorite_remove">Eltávolítás Kedvencekből</string>
    <string name="notification_favorite_added">Hozzáadva a Kedvencekhez</string>
    <string name="notification_favorite_removed">Eltávolítva a Kedvencekből</string>

    <!-- Download -->
    <string name="action_download">Letöltés</string>
    <string name="notification_download">Letöltés a háttérben</string>
    <string name="notification_storage_permission_required">Tárhely hozzéférés szükséges a könyvek offline kezeléséhez</string>

    <string name="browse_downloads">Letöltések</string>
    <string name="browse_downloads_subtitle">Korábban letöltött hangoskönyvek</string>

    <!-- Delete -->
    <string name="action_delete">Tárhely felszabadítása</string>
    <string name="confirm_delete_question">Biztosan törölni kívánja ezt az offline hangoskönyvet?</string>
    <string name="confirm_delete">Törlés</string>


    <!-- PLAYBACK RESOURCES -->
    <!-- Notifications -->
    <string name="notification_channel">com.murati.oszk.audiobook.notification</string>
    <string name="notification_channel_description">Hangoskönytár lejátszó értesítések</string>

    <string name="error_loading_media">Nincs megjeleníthető elem</string>

    <string name="notification_playback_track_error">A rész nem elérhető</string>
    <string name="notification_offline">Offline módban csak letöltött könyvek érhetők el</string>
    <string name="notification_playback_restored">Lejátszási pozíció visszaállítva %s %s</string>

    <string name="random_queue_title">Véletlen könyvek</string>
    <string name="casting_to_device">Lejátszás %1$s eszközön</string>
    <string name="currently_playing_song">Most játszik</string>
    <string name="currently_playing_artist">Hangoskönyv előadója</string>
    <string name="currently_playing_extra_info">További hangfájl infó</string>

    <string name="open_item">Megnyitás</string>
    <string name="play_item">Lejátszás</string>
    <string name="play_pause">Indítás vagy szünet</string>
    <string name="skip_next">Következő</string>
    <string name="skip_prev">Előző</string>
    <string name="touch_to_cast">Hangoskönyveit TV, ChromeCast, Android Auto vagy más eszközökön is lejátszhatja</string>

    <string name="home_title">Kezdőlap</string>
    <string name="related_content_header">Hasonló könyvek</string>

    <string name="open_content_drawer">Főmenü megnyitása</string>
    <string name="close_content_drawer">Főmenü bezárása</string>


    <string name="now_playing">Most hallgat</string>
    <string name="background_image_str">Hangoskönyv borítója</string>
    <string name="search_queue_title">Keresés találatai</string>
    <string name="no_search_results">Nincs találat</string>
    <string name="loading">Betöltés..</string>
    <string name="media_route_menu_title">Lejátszás eszközön...</string>
    <string name="stop_casting">Sugárzás leállítása..</string>
    <string name="label_pause">Szünet</string>
    <string name="label_play">Lejátszás</string>
    <string name="label_previous">Előző</string>
    <string name="label_next">Következő</string>
    <string name="search_title">Keresés</string>
    <string name="app_label">Hangoskönyvek</string>
    <string name="search_hint">Hangoskönyvek keresése</string>


    <!-- ADs -->
    <string name="setting_ad_switch">Hirdetések engedélyezve</string>

    <!-- About page -->
    <string name="about_content">
        A Hangoskönyvtár alkalmazás az Országos Széchényi Könyvtár - Magyar Elektronikus Könyvtár
        (MEK) nyilvános adatbázisára épül, amely üzemeltetőinek ez úton is köszönetet szeretnénk mondani.
        \n\n
        Az alkalmazás Muráti Ákos szabadidős projekje, így az esetleges hibákért
        a könyvtár nem tartozik felelősséggel.
        Amennyiben megteheti, kérem támogassa a projektet az alábbi oldalon:
    </string>

    <string name="about_button_murati">murati.hu megnyitása</string>
    <string name="about_button_store">Play Store megnyitása</string>
    <string name="about_button_support">Patreon - támogatói oldal megnyitása</string>
    <string name="about_button_oszk">Oszk - MEK megnyitása</string>

    <string name="about_footer">Segítségüket előre is köszönjük!</string>
    <string name="about_privacy" translatable="false">https://ekonyvtar.github.io/audiobook-privacy_policy.html</string>
    <string name="about_privacy_label">Adatvédelmi nyilatkozat</string>

    <string name="admob_app_id" translatable="false">ca-app-pub-4138598680797724~1681833678</string>
    <string name="admob_unit_id_1" translatable="false">ca-app-pub-4138598680797724/9225265861</string>
</resources>
