<?xml version="1.0" encoding="utf-8"?>
<!--
Copyright (C) 2014 The Android Open Source Project

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

   http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
-->
<RelativeLayout xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/pageView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:fitsSystemWindows="true">

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/mainframe"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@drawable/fullscreen_bg_gradient">

        <ImageView
            android:id="@+id/background_image"
            android:layout_width="192dp"
            android:layout_height="236dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="false"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/background_image_str"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/line1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/line2"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:shadowColor="@android:color/black"
            android:shadowRadius="20"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/fullscreen_line_color" />

        <TextView
            android:id="@+id/line2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/line3"
            android:ellipsize="end"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:shadowColor="@android:color/black"
            android:shadowRadius="20"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/fullscreen_secondary_line_color" />

        <TextView
            android:id="@+id/line3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/controllers"
            android:ellipsize="end"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:shadowColor="@android:color/black"
            android:shadowRadius="20"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/fullscreen_secondary_line_color" />

        <!--
        <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/favorite_button"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/line2"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="11dp"
            android:layout_marginEnd="22dp"
            android:src="@drawable/ic_star_off"
            app:backgroundTint="@color/default_primary_dark"
            app:fabSize="normal" />
        -->

        <!--
        <android.support.design.widget.FloatingActionButton xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/download_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/favorite_button"
            android:layout_alignTop="@+id/favorite_button"
            android:layout_marginEnd="66dp"
            android:src="@drawable/ic_action_download"
            android:visibility="invisible"
            app:backgroundTint="@color/default_primary_dark"
            app:fabSize="normal" />
        -->

        <LinearLayout
            android:id="@+id/controllers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:visibility="invisible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="48dp">

                <TextView
                    android:id="@+id/startText"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="@dimen/text_view_margin"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:textColor="@android:color/white" />

                <SeekBar
                    android:id="@+id/seekBar1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_toStartOf="@+id/endText"
                    android:layout_toEndOf="@+id/startText" />

                <TextView
                    android:id="@+id/endText"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:layout_alignWithParentIfMissing="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/end_text_margin"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:textColor="@android:color/white" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                >

                <ImageView
                    android:id="@+id/prev"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/skip_prev"
                    android:src="@drawable/ic_skip_previous_white_48dp" />

                <ImageView
                    android:id="@+id/backward"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:layout_marginTop="6dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/skip_prev"
                    android:src="@drawable/ic_play_backward" />

                <ImageView
                    android:id="@+id/play_pause"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/play_pause"
                    android:src="@drawable/uamp_ic_play_arrow_white_48dp" />

                <ImageView
                    android:id="@+id/forward"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_weight="1"
                    android:layout_marginTop="6dp"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/skip_next"
                    android:src="@drawable/ic_play_forward" />


                <ImageView
                    android:id="@+id/next"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?selectableItemBackgroundBorderless"
                    android:contentDescription="@string/skip_next"
                    android:src="@drawable/ic_skip_next_white_48dp" />

            </LinearLayout>
            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/text_view_margin"
                ads:adSize="BANNER"
                ads:adUnitId="@string/admob_unit_id_1" />

        </LinearLayout>

    </RelativeLayout>



    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/fullscreen_toolbar_bg_gradient"
        android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

</RelativeLayout>
